welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:5: error: method jardiniere overrides nothing
override def jardiniere(){growFlowers();gauche();avance();avance();droite();avance();avance();fleur(Color.ORANGE)} 
             ^